# url-Blocker

./: .gitignore  CMakeLists.txt  README.md  blocklist.txt  url-block.service  urlblocker.service  webblock.service
src/: blocklist.hpp  dns.hpp  iptables.hpp  main.cpp  proxy.cpp  proxy.hpp  stats.hpp  tui.hpp  windows_dns_guard.hpp
